--- a/catlinks-top.css
+++ b/catlinks-top.css
@@ -7,10 +7,12 @@
 	float: left;
 }
 #catlinks-top .catlinks {
+	margin: 0;
+}
+#catlinks-top.mw18 .catlinks {
 	padding-top: 0;
 	padding-bottom: 0;
 	padding-right: 0;
-	margin: 0;
 }
 /* Align filetoc with top category links */
 ul#filetoc {
